crates/es-fluent-core/tests/snapshots/enum_mixed_variants_tests__enum_mixed_variants_analysis_without_this_generates_expected_ftl_type_info.snap
---
source: crates/es-fluent-core/tests/enum_mixed_variants_tests.rs
expression: "&infos"
---
[
  FtlTypeInfo(
    type_kind: Enum,
    type_name: "Mixed",
    variants: [
      FtlVariant(
        name: "UnitA",
        ftl_key: FluentKey("mixed-UnitA"),
        arguments: None,
      ),
      FtlVariant(
        name: "UnitB",
        ftl_key: FluentKey("mixed-UnitB"),
        arguments: None,
      ),
    ],
  ),
  FtlTypeInfo(
    type_kind: Struct,
    type_name: "Mixed",
    variants: [
      FtlVariant(
        name: "Data",
        ftl_key: FluentKey("mixed-Data"),
        arguments: Some([
          "x",
          "y",
        ]),
      ),
      FtlVariant(
        name: "Other",
        ftl_key: FluentKey("mixed-Other"),
        arguments: Some([
          "f1",
          "f2",
        ]),
      ),
    ],
  ),
]
